# caspian

./: .gitattributes  .gitignore  Makefile  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/jniLibs/arm64-v8a/: libsafepool.h
android/app/src/main/jniLibs/x86_64/: libsafepool.h
android/app/src/main/kotlin/com/example/caspian/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/: Dummy.m
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Safepool.xcframework/: Info.plist
lib/: caspian_app.dart  main.dart
lib/apps/: chat.dart  chat2.dart
lib/common/: const.dart  download.dart  file_access.dart  image.dart  io.dart  main_navigation_bar.dart  progress.dart
lib/navigation/: bar.dart
lib/pool/: addpool.dart  addpool_create.dart  addpool_import.dart  addstorage.dart  create.dart  home.dart  import.dart  pool.dart  settings.dart  subpool.dart
lib/safepool/: safepool.dart  safepool_def.dart  safepool_method_channel.dart  safepool_platform_interface.dart
lib/settings/: reset.dart  settings.dart
linux/: CMakeLists.txt  Makefile  cmake_install.cmake  my_application.cc
linux/flutter/: Makefile  cmake_install.cmake  generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
snap/: snapcraft.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+28 files in other folders)
